remove margin to prevent overflowing

--- a/themes/src/sass/gtk/_common-4.0.scss
+++ b/themes/src/sass/gtk/_common-4.0.scss
@@ -122,7 +122,8 @@ gridview {
 		box {
 			//cells
 			border-spacing: $space-size + 2px; //label separation
-			margin: $space-size * 2;
+			//margin: $space-size * 2;
+			margin: 0;
 		}
 	}
 }
